--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-:)
+<html>
+<head>
+<title>Skoro startuem</title>
+<meta name="yandex-verification" content="d3b6833bf861a888" />
+</head>
+<body>
+<h1>Skoro startuem :)</h1>
+</body>
+</html>
