--- a/index.html
+++ b/index.html
@@ -1,9 +1,162 @@
-<html>
+<!DOCTYPE html>
+<html class="no-js" lang="en">
 <head>
-<title>Skoro startuem</title>
-<meta name="yandex-verification" content="d3b6833bf861a888" />
+  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+  <meta property="og:url" content="https:&#x2F;&#x2F;dfov.ru">
+
+  
+  <meta name="description" content="Панель управления для OpenVPN серверов">
+  
+
+  
+  <meta property="og:title" content="Панель управления для OpenVPN">
+  
+
+  
+  <meta name="keywords" content="панель управления для openvpn, интерфейс для openvpn, openvpn">
+  
+
+  
+  <meta property="og:description" content="Панель управления для OpenVPN серверов" />
+  
+
+  
+  <meta property="og:url" content="/" />
+  
+
+  <meta property="og:type" content="website">
+
+  <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
+
+  <!-- SEO -->
+  
+  <title>Панель управления для OpenVPN</title>
+  
+
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+  <!--  css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https:&#x2F;&#x2F;dfov.ru/style.css">
+
+  <!-- fonts -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700&display=swap"
+        rel="stylesheet">
+
+  <!-- icons  -->
+  <script src="https://kit.fontawesome.com/b82ba96aff.js" crossorigin="anonymous"></script>
+
+  
 </head>
-<body>
-<h1>Skoro startuem :)</h1>
+
+<body class="container p-3">
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(66871156, "init", {
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/66871156" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+
+  <div id="top-menu" class="row justify-content-between mb-3 mb-lg-5">
+    <div id="title" class="col-12 col-lg-3 cursor-pointer" onclick="location.href='/'" title="Перейти на главную">
+      <h3 class="mb-0">DASHBOARD</h3>
+      <div id="title_annotation" class="text-secondary">
+        ДЛЯ OPENVPN
+      </div>
+    </div>
+    <div class="col-12 col-lg-4 p-3">
+      <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/download">
+        СКАЧАТЬ
+      </a>
+
+      <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/pricing">
+        ЦЕНЫ
+      </a>
+
+      <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/faq">
+        FAQ
+      </a>
+
+      <a class="top-menu__item cursor-pointer d-inline-block align-baseline font-weight-bold" href="/roadmap">
+        ROADMAP
+      </a>
+    </div>
+  </div>
+
+  
+<div>
+    <h4 class="mb-4 mb-lg-5">Панель управления для вашего OpenVPN сервера.</h4>
+
+    <div class="row mb-3">
+        <div class="col-12 col-lg-6">
+            <ul class="pl-3 mb-lg-5">
+                <li class="mb-4">
+                    <h5 class="text-dark">Управление пользователями</h5>
+                    <div class="text-secondary">
+                        Добавление, редактирование, выпуск и отзыв ключей, создание ovpn-файлов.
+                    </div>
+                </li>
+                <li class="mb-4">
+                    <h5>Управление службой OpenVPN</h5>
+                    <div class="text-secondary">
+                        Запуск и остановка.
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-12 col-lg-6">
+            <ul class="pl-3 mb-lg-5">
+                <li class="mb-4">
+                    <h5 class="mb-1">Мониторинг</h5>
+                    <div class="text-secondary">Список активных подключений, возможность отключить или заблокировать.</div>
+                </li>
+                <li class="mb-4">
+                    <h5>Standalone-приложение без абонентской платы</h5>
+                    <div class="text-secondary">
+                        Приложение работает на вашем сервере, данные полностью под вашим контролем.
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="rounded shadow-sm mb-5">
+        <img src="images/dashboard.png" class="img-fluid" alt="Панель управления для OpenVPN">
+    </div>
+
+    <div class="text-center p-4 rounded border border-light mb-4">
+        <div class="mb-3">Бесплатная версия не ограничена по времени и включает в себя 5 пользователей.</div>
+        <button class="btn btn-success shadow-sm" onclick="location.href='/download'">Скачать</button>
+    </div>
+
+</div>
+
+
+  <footer class="mt-5 text-sm text-secondary text-center mt-5 mb-5">
+    <a href="https:&#x2F;&#x2F;docs.dfov.ru" target="_blank" class="mr-2 mr-lg-3">ДОКУМЕНТАЦИЯ</a>
+    <a href="/security" class="mr-2 mr-lg-3">БЕЗОПАСНОСТЬ</a>
+    <a href="/support" class="mr-lg-5">ПОДДЕРЖКА</a>
+
+    <span class="mt-5 mt-lg-0 mr-lg-5">
+      <a href="https://tinyops.ru" target="_blank" class="text-secondary">TINYOPS</a> &copy; 2020
+    </span>
+  </footer>
+
 </body>
 </html>
