--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       </div>
     </div>
     <div class="col-12 col-lg-4 p-3">
+      <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/">
+        ГЛАВНАЯ
+      </a>
+
       <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/download">
         СКАЧАТЬ
       </a>
@@ -90,10 +94,6 @@
 
       <a class="top-menu__item cursor-pointer d-inline-block font-weight-bold mr-3 mr-lg-4" href="/faq">
         FAQ
-      </a>
-
-      <a class="top-menu__item cursor-pointer d-inline-block align-baseline font-weight-bold" href="/roadmap">
-        ROADMAP
       </a>
     </div>
   </div>
