--- a/download/index.html
+++ b/download/index.html
@@ -106,16 +106,30 @@
             Вы можете скачать приложение через браузер или прямо на Linux-сервер утилитой <span class="text-success">wget</span>.
         </div>
 
+        <div class="p-3 rounded bg-light mb-1">
+            <h6 class="text-dark">Версия 1.0.5</h6>
+            <div>
+                <ul>
+                    <li>Небольшие улучшения интерфейса</li>
+                    <li>Исправление ошибок</li>
+                </ul>
+            </div>
+            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></h5>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></div>
+            <div class="d-none d-lg-block text-sm text-secondary">SHA1: 9b65a24c539cc40be58a188742f115335ba8b397</div>
+            <div class="d-lg-none text-xs text-secondary">SHA1: 9b65a24c539cc40be58a188742f115335ba8b397</div>
+        </div>
+
         <div class="p-3 rounded bg-light">
             <h6 class="text-dark">Версия 1.0.4</h6>
-            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">https:&#x2F;&#x2F;dfov.ru/download/latest.zip</a></h5>
-            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">https:&#x2F;&#x2F;dfov.ru/download/latest.zip</a></div>
+            <div><ul>
+                <li>Исправление ошибок</li>
+            </ul></div>
+            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip">Скачать</a></h5>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip">Скачать</a></div>
             <div class="d-none d-lg-block text-sm text-secondary">SHA1: 28b7f1f98e7c851465364298176c982b405593de</div>
             <div class="d-lg-none text-xs text-secondary">SHA1: 28b7f1f98e7c851465364298176c982b405593de</div>
         </div>
-
-
-        <div></div>
     </div>
 </div>
 
