--- a/faq/index.html
+++ b/faq/index.html
@@ -103,20 +103,24 @@
     <div class="text-center mb-3 mb-lg-5">
         <h2>FAQ</h2>
         <div>
-            Часто-задаваемые вопросы и ответы на них.
+            Часто задаваемые вопросы и ответы на них.
         </div>
     </div>
 
     <div class="row mb-3 mb-3 mb-lg-5">
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
             <h5>Какие операционные системы поддерживаются?</h5>
-            <div>В данный момент мы поддерживаем только Linux.</div>
+            <div>В данный момент только Linux.</div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
             <h5>Насколько приложение безопасно?</h5>
             <div>
-                Мы создали отдельную <a href="/security">страницу</a>, посвящённую безопасности приложения.
+                Приложению не требуется доступ в Интернет, оно работает от непривилегированного пользователя,
+                поддерживает аутентификацию по паролю и встроенную защиту от SQL-инъекций.
+                В платной версии доступен аудит исходного кода.
+                <br/>
+                Подробно на странице <a href="/security">про безопасность</a>.
             </div>
         </div>
 
@@ -124,10 +128,10 @@
             <h5>Какие технические требования у приложения?</h5>
             <div>
                 <ul>
-                    <li>ОС: Linux</li>
-                    <li>Java 8</li>
-                    <li>Процессор: 1 ядро</li>
-                    <li>Оперативная память: 250-350МБ</li>
+                    <li>ОС: Linux.</li>
+                    <li>Java 8.</li>
+                    <li>Процессор: 1 ядро.</li>
+                    <li>Оперативная память: 250-350МБ.</li>
                 </ul>
             </div>
         </div>
@@ -137,21 +141,20 @@
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
             <h5>Потребуется ли отдельный сервер для приложения?</h5>
             <div>
-                Отдельный сервер не требуется. Приложение это jar-файл,
+                Не потребуется. Приложение — это jar-файл,
                 который вы устанавливаете на сервер, где работает OpenVPN.
             </div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
-            <h5>Требуется ли для работы приложения постоянное Интернет-подключение?</h5>
+            <h5>Требуется ли для работы приложения постоянное интернет-подключение?</h5>
             <div>Не требуется.</div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
-            <h5>Что делать если мне не хватает определённой возможности (feature)?</h5>
+            <h5>Что делать, если мне не хватает определённой возможности (feature)?</h5>
             <div>
-                У нас есть <a href="/roadmap">страница</a> по развитию продукта (roadmap), которая отражает направление нашего движения.
-                Если нужная вам возможность отсутствует в наших планах, пожалуйста, напишите на почту
+                Пожалуйста, напишите на почту
                 <a href="mailto:hello@dfov.ru">hello@dfov.ru</a>.
             </div>
         </div>
@@ -159,14 +162,14 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
-            <h5>Какие технологии использованы в приложении?</h5>
+            <h5>Какие технологии используются в приложении?</h5>
             <div>Kotlin, Spring Boot 2+, Angular 10+, Twitter's Bootstrap, FontAwesome, Google Fonts.</div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
-            <h5>Я хочу настроить VPN-сервер, но не разбираюсь в Linux</h5>
+            <h5>Я хочу настроить VPN-сервер, но не разбираюсь в Linux.</h5>
             <div>
-                Мы предлагаем услуги по настройке OpenVPN сервера на вашем сервере.
+                Мы предлагаем услуги по настройке OpenVPN на вашем сервере.
                 Напишите на почту <a href="mailto:services@dfov.ru">services@dfov.ru</a>.
             </div>
         </div>
