--- a/pricing/index.html
+++ b/pricing/index.html
@@ -109,10 +109,10 @@
     </div>
 
     <div class="d-block d-lg-none mb-3">
-        <h4>Для команд любого размера, с размещением на вашем сервере.</h4>
+        <h4>Для команд любого размера с размещением на вашем сервере.</h4>
         <div>
-            Все лицензии включают в себя одинаковые функции, отличаются лишь количеством пользователей и
-            наличием технической поддержки.
+            Все лицензии включают в себя одинаковые функции. Отличия в количестве пользователей,
+            наличии технической поддержки и возможностью аудита исходного кода приложения.
         </div>
     </div>
 
@@ -125,8 +125,8 @@
 
             <div class="text-sm">
                 <ul class="text-sm pl-3">
-                    <li class="mb-1">5 пользователей</li>
-                    <li class="mb-1">Базовая техническая поддержка</li>
+                    <li class="mb-1">До 5 пользователей.</li>
+                    <li class="mb-1">Базовая техническая поддержка.</li>
                 </ul>
             </div>
         </div>
@@ -134,12 +134,12 @@
             <h5>Бизнес</h5>
             <hr>
 
-            <h6 class="mb-3 text-success">14900 ₽</h6>
+            <h6 class="mb-3 text-success">14 900 ₽</h6>
 
             <ul class="text-sm pl-3">
-                <li class="mb-1">До 25 пользователей</li>
-                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года</li>
-                <li>Аудит исходного кода</li>
+                <li class="mb-1">До 25 пользователей.</li>
+                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года.</li>
+                <li>Аудит исходного кода.</li>
             </ul>
 
         </div>
@@ -148,11 +148,11 @@
             <h5>Премиум</h5>
             <hr>
 
-            <h6 class="mb-3 text-success">29900 ₽</h6>
+            <h6 class="mb-3 text-success">29 900 ₽</h6>
             <ul class="text-sm pl-3">
-                <li class="mb-1">До 50 пользователей</li>
-                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года</li>
-                <li>Аудит исходного кода</li>
+                <li class="mb-1">До 50 пользователей.</li>
+                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года.</li>
+                <li>Аудит исходного кода.</li>
             </ul>
         </div>
 
@@ -160,11 +160,11 @@
             <h5>Энтерпрайз</h5>
             <hr>
 
-            <h6 class="mb-3 text-success">59900 рублей</h6>
+            <h6 class="mb-3 text-success">59 900 рублей</h6>
             <ul class="text-sm pl-3">
-                <li class="mb-1">До 100 пользователей</li>
-                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года</li>
-                <li>Аудит исходного кода</li>
+                <li class="mb-1">До 100 пользователей.</li>
+                <li class="mb-1">Обновления и полная техническая поддержка в течение 1 года.</li>
+                <li>Аудит исходного кода.</li>
             </ul>
         </div>
     </div>
@@ -193,8 +193,8 @@
             <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
                 <h5>Что входит в платную версию?</h5>
                 <div>
-                    Большее количество пользователей чем в бесплатной,
-                    1 год поддержки с момента покупки и все обновления за этот период. Дополнительно,
+                    Большее количество пользователей, чем в бесплатной,
+                    1 год поддержки с момента покупки и все обновления за этот период. Дополнительно —
                     возможность аудита безопасности исходного кода приложения.
                 </div>
             </div>
@@ -207,8 +207,8 @@
                 <h5>Что входит в дистрибутив приложения?</h5>
                 <div>
                     <ul>
-                        <li>Исполняемый файл приложения и файлы конфигурации</li>
-                        <li>Документация на русском языке</li>
+                        <li>Исполняемый файл приложения и файлы конфигурации.</li>
+                        <li>Документация на русском языке.</li>
                     </ul>
                 </div>
             </div>
@@ -218,22 +218,23 @@
             <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
                 <h5>Как перейти на версию с бо&#x301;льшим количеством пользователей?</h5>
                 <div>
-                    Воспользуйтесь формой на этой странице, либо напишите на почту <a href="mailto:hello@dfov.ru">sales@dfov.ru</a>,
-                    указав какое количество пользователей вам необходимо.
+                    Воспользуйтесь формой на текущей странице, либо напишите
+                    на почту <a href="mailto:hello@dfov.ru">sales@dfov.ru</a>,
+                    указав, какое количество пользователей вам необходимо.
                 </div>
             </div>
             <div class="col-12 col-lg-4 text-left mb-4 mb-lg-0">
                 <h5>Что будет после окончания периода поддержки?</h5>
-                <div>Вы можете продолжать пользоваться приложением как и прежде,
+                <div>Вы можете продолжать пользоваться приложением, как и прежде,
                     но без полной технической поддержки и свежих обновлений.
-                    Если вам потребуются поддержка и обновления, достаточно
-                    продлить действующую версию. Даём скидку 10% при продлении лицензии.</div>
+                    Если они вам потребуются, нужно продлить действующую версию.
+                    На продление лицензии даём скидку 10 %.</div>
             </div>
             <div class="col-12 col-lg-4 text-left">
-                <h5>Что будет с лицензией если потребуется поменять вышедший из строя сервер?</h5>
+                <h5>Что будет с лицензией, если потребуется поменять вышедший из строя сервер?</h5>
                 <div>
                     Такое случается в любой инфраструктуре, понимаем.
-                    Напишите на почту <a href="mailto:hello@dfov.ru">support@dfov.ru</a> и
+                    Напишите на почту <a href="mailto:hello@dfov.ru">support@dfov.ru</a>, и
                     мы обязательно вам поможем.
                 </div>
             </div>
