--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -107,7 +107,7 @@
     <div>
         <h5><span class="text-secondary">- поддержка уровней доступа и разграничения прав</span></h5>
         <h5><span class="text-secondary">- установка сервера OpenVPN</span></h5>
-        <h5><span class="text-secondary">- конфигурация OpenVPN сервера</span></h5>
+        <h5><span class="text-secondary">- конфигурация OpenVPN-сервера</span></h5>
         <h5><span class="text-secondary">- отчёты по активности пользователей</span></h5>
         <h5><span class="text-secondary">- поддержка Active Directory \ LDAP</span></h5>
         <h5><span class="text-secondary">- поддержка встроенного резервного копирования</span></h5>
