--- a/support/index.html
+++ b/support/index.html
@@ -107,8 +107,8 @@
             <div class="mb-2">Доступна для всех видов лицензий.</div>
             <div class="mb-4">
                 <ul class="pl-4">
-                    <li class="mb-2">Помощь при обнаружении ошибок в приложении</li>
-                    <li>Время отклика на инцидент в течение 36 часов</li>
+                    <li class="mb-2">Помощь при обнаружении ошибок в приложении.</li>
+                    <li>Время отклика на инцидент в течение 36 часов.</li>
                 </ul>
             </div>
 
@@ -117,9 +117,9 @@
 
             <div class="mb-5">
                 <ul class="pl-4">
-                    <li class="mb-2">Помощь при обнаружении ошибок в приложении</li>
-                    <li class="mb-2">Помощь с установкой и настройкой приложения</li>
-                    <li>Время отклика на инцидент в течение 12 часов</li>
+                    <li class="mb-2">Помощь при обнаружении ошибок в приложении.</li>
+                    <li class="mb-2">Помощь с установкой и настройкой приложения.</li>
+                    <li>Время отклика на инцидент в течение 12 часов.</li>
                 </ul>
             </div>
 
@@ -128,7 +128,9 @@
 
     <div class="rounded border border-secondary p-3 text-center">
         <h6 class="mb-0 p-0">
-            <span class="text-dark">Единый адрес технической поддержки</span> <a href="mailto:support@dfov.ru">support@dfov.ru</a>
+            <span class="text-dark">
+                Единый адрес технической поддержки:
+            </span> <a href="mailto:support@dfov.ru">support@dfov.ru</a>
         </h6>
     </div>
 </div>
