--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   
 <div>
-    <h4 class="mb-4 mb-lg-5">Панель управления для вашего OpenVPN сервера.</h4>
+    <h4 class="mb-4 mb-lg-5">Панель управления для вашего OpenVPN-сервера.</h4>
 
     <div class="row mb-3">
         <div class="col-12 col-lg-6">
