--- a/security/index.html
+++ b/security/index.html
@@ -103,32 +103,32 @@
     <div class="d-none d-lg-block text-center mb-5">
         <h2>Безопасность</h2>
         <div>
-            Часто-задаваемые вопросы и ответы на них.
+            Часто задаваемые вопросы и ответы на них.
         </div>
     </div>
     <div class="d-block d-lg-none mb-3">
         <h2>Безопасность</h2>
         <div>
-            Часто-задаваемые вопросы и ответы на них.
+            Часто задаваемые вопросы и ответы на них.
         </div>
     </div>
 
     <div class="row mb-3 mb-lg-5">
         <div class="col-12 col-lg-4 text-left mb-3 mb-lg-0">
-            <h5>Является ли решение безопасным?</h5>
+            <h5>Является ли приложение безопасным?</h5>
             <div>Приложение устанавливается на сервер вашей компании, доступ к которому есть только у вас.
                 Открытый исходный код позволяет провести аудит безопасности.</div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-3 mb-lg-0">
-            <h5>Требуется ли приложению доступ в Интернет?</h5>
-            <div>Нет, доступ в Интернет не требуется.</div>
+            <h5>Требуется ли приложению доступ в интернет?</h5>
+            <div>Не требуется.</div>
         </div>
 
         <div class="col-12 col-lg-4 text-left mb-3 mb-lg-0">
             <h5>Требуются ли приложению повышенные привилегии в системе?</h5>
-            Приложению требуется доступ для управления службой OpenVPN сервера (запуск и остановка), который настраивается через механизм sudo.
-            Более подробно - в <a href="https:&#x2F;&#x2F;docs.dfov.ru/installation">руководстве по установке</a>.
+            Приложению требуется доступ для управления службой OpenVPN-сервера (запуск и остановка), который настраивается через механизм sudo.
+            Об этом — в <a href="https:&#x2F;&#x2F;docs.dfov.ru/installation">руководстве по установке</a>.
             Приложение работает от имени пользователя openvpn.
         </div>
     </div>
@@ -137,8 +137,8 @@
         <div class="col-12 col-lg-4 text-left mb-3 mb-lg-0">
             <h5>Какие механизмы защиты обеспечивает приложение?</h5>
             <ul>
-                <li>Аутентификацию по паролю</li>
-                <li>Защиту от SQL-инъекций</li>
+                <li>Аутентификацию по паролю.</li>
+                <li>Защиту от SQL-инъекций.</li>
             </ul>
         </div>
 
