--- a/pricing/index.html
+++ b/pricing/index.html
@@ -247,13 +247,13 @@
 </div>
 
 
-  <footer class="mt-5 text-sm text-secondary text-center mt-5 mb-5">
+  <footer class="m-5 text-sm text-secondary text-center p-5">
     <a href="https:&#x2F;&#x2F;docs.dfov.ru" target="_blank" class="mr-2 mr-lg-3">ДОКУМЕНТАЦИЯ</a>
     <a href="/security" class="mr-2 mr-lg-3">БЕЗОПАСНОСТЬ</a>
     <a href="/support" class="mr-lg-5">ПОДДЕРЖКА</a>
 
-    <span class="mt-5 mt-lg-0 mr-lg-5">
-      <a href="https://tinyops.ru" target="_blank" class="text-secondary">TINYOPS</a> &copy; 2020
+    <span class="mt-5 mt-lg-0 mr-lg-5 mb-5">
+      <a href="https://tinyops.ru" target="_blank" class="text-secondary">TINYOPS</a> &copy; 2020-2021
     </span>
   </footer>
 
