--- a/download/index.html
+++ b/download/index.html
@@ -106,6 +106,21 @@
             Вы можете скачать приложение через браузер или прямо на Linux-сервер утилитой <span class="text-success">wget</span>.
         </div>
 
+        <div class="p-3 rounded bg-light mb-3">
+            <h6 class="text-dark">Версия 1.0.7</h6>
+            <div>
+                <ul>
+                    <li>Улучшения интерфейса</li>
+                </ul>
+            </div>
+            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></h5>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></div>
+            <div class="d-none d-lg-block text-sm text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
+            <div class="d-lg-none text-xs text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
+        </div>
+
+        <h5 class="mb-2">Предыдущие версии</h5>
+
         <div class="p-3 rounded bg-light mb-1">
             <h6 class="text-dark">Версия 1.0.5</h6>
             <div>
