--- a/download/index.html
+++ b/download/index.html
@@ -107,41 +107,59 @@
         </div>
 
         <div class="p-3 rounded bg-light mb-3">
-            <h6 class="text-dark">Версия 1.0.7</h6>
+            <h6 class="text-dark">Версия 1.1.0</h6>
             <div>
-                <ul>
-                    <li>Улучшения интерфейса</li>
+                <ul class="text-sm">
+                    <li>Возможность искать по списку активных подключений</li>
+                    <li>Возможность искать по списку пользователей</li>
+                    <li>Исправлен эффект 'прыгающего окна' при переключении вкладок</li>
                 </ul>
             </div>
-            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></h5>
-            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></div>
-            <div class="d-none d-lg-block text-sm text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
-            <div class="d-lg-none text-xs text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
+            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip"
+                                             class="btn btn-success" title="Скачать актуальную версию">Скачать</a></h5>
+            <div class="d-lg-none btn btn-success">
+                <a class="btn btn-success" href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip"
+                   title="Скачать актуальную версию">Скачать</a></div>
+            <div class="d-none d-lg-block text-sm text-secondary">SHA256: 15a9d4ab32fdec008e7ddef5a0913514c7aeae8f17fccf458e9f743ac8b369bb</div>
+            <div class="d-lg-none text-xs text-secondary">SHA256: 15a9d4ab32fdec008e7ddef5a0913514c7aeae8f17fccf458e9f743ac8b369bb</div>
         </div>
 
         <h5 class="mb-2">Предыдущие версии</h5>
 
         <div class="p-3 rounded bg-light mb-1">
+            <h6 class="text-dark">Версия 1.0.7</h6>
+            <div>
+                <ul class="text-sm">
+                    <li>Улучшения интерфейса</li>
+                </ul>
+            </div>
+            <h6 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip" class="text-secondary">Скачать</a></h6>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip" class="text-secondary">Скачать</a></div>
+            <div class="d-none d-lg-block text-sm text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
+            <div class="d-lg-none text-xs text-secondary">SHA256: cdd9088209eba5fe6e96c8fc687692f5885a6df4f1f74925644504b96ccd4bd3</div>
+        </div>
+
+        <div class="p-3 rounded bg-light mb-1">
             <h6 class="text-dark">Версия 1.0.5</h6>
             <div>
-                <ul>
+                <ul class="text-sm">
                     <li>Небольшие улучшения интерфейса</li>
                     <li>Исправление ошибок</li>
                 </ul>
             </div>
-            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></h5>
-            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip">Скачать</a></div>
+            <h6 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip" class="text-secondary">Скачать</a></h6>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/latest.zip" class="text-secondary">Скачать</a></div>
             <div class="d-none d-lg-block text-sm text-secondary">SHA256: 9b65a24c539cc40be58a188742f115335ba8b397</div>
             <div class="d-lg-none text-xs text-secondary">SHA256: 9b65a24c539cc40be58a188742f115335ba8b397</div>
         </div>
 
         <div class="p-3 rounded bg-light">
             <h6 class="text-dark">Версия 1.0.4</h6>
-            <div><ul>
+            <div><ul class="text-sm">
                 <li>Исправление ошибок</li>
             </ul></div>
-            <h5 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip">Скачать</a></h5>
-            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip">Скачать</a></div>
+            <h6 class="d-none d-lg-block"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip" class="text-secondary">Скачать</a></h6>
+            <div class="d-lg-none"><a href="https:&#x2F;&#x2F;dfov.ru/download/1.0.4.zip" class="text-secondary">Скачать</a></div>
             <div class="d-none d-lg-block text-sm text-secondary">SHA1: 28b7f1f98e7c851465364298176c982b405593de</div>
             <div class="d-lg-none text-xs text-secondary">SHA1: 28b7f1f98e7c851465364298176c982b405593de</div>
         </div>
